Fixed typos in notebooks

--- a/Attack_with_CW/kyber_polytomsg_leakage_detection.ipynb
+++ b/Attack_with_CW/kyber_polytomsg_leakage_detection.ipynb
@@ -112,7 +112,6 @@
     "PLATFORM = 'CWLITEARM'\n",
     "\n",
     "# Project Targeted\n",
-    "# CRYPTO_TARGET ='FMLKEM'\n",
     "CRYPTO_TARGET ='FKYBER'\n",
     "\n",
     "# SimpleSerial version used\n",
@@ -121,7 +120,7 @@
     "# Kyber K size, determines security level\n",
     "KYBER_K = repr(K)\n",
     "\n",
-    "# If SHUFFLING = '0' standard poly_tomsg used, if SHUFFLING = '1' shuffled poly_tomsg\n",
+    "# If SHUFFLING = '0', the standard poly_tomsg is used; if SHUFFLING = '1', the shuffled poly_tomsg is used\n",
     "SHUFFLING = f\"{False:d}\" "
    ]
   },
@@ -132,7 +131,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Detecting where is the simpleserial find, if any\n",
+    "# Detecting where is the ChipWhisperer setup notebook, if any\n",
     "probable_path_to_chipwhisperer_setup_notebook = !find ~/chipwhisperer/jupyter/Setup_Scripts/ -name \"Setup_Generic.ipynb\"\n",
     "\n",
     "print(f\"Probable path to ChipWhisperer jupyter setup script:\")\n",
@@ -169,7 +168,6 @@
    "outputs": [],
    "source": [
     "# Number of samples that the ChipWhisperer has to record per trace\n",
-    "# scope.adc.samples = 17000\n",
     "scope.adc.samples = 24400"
    ]
   },
@@ -188,7 +186,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Detecting where is the simpleserial find, if any\n",
+    "# Detecting where is the simpleserial location, if any\n",
     "probable_path_to_simpleserial = !find ~ -name simpleserial-{CRYPTO_TARGET.lower()}\n",
     "\n",
     "print(f\"Probable path to communication protocol with the {CRYPTO_TARGET} code: \")\n",
@@ -242,7 +240,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Detecting where is the simpleserial find, if any\n",
+    "# Detecting where is the simpleserial executable location, if any\n",
     "probable_path_to_executable = !find ~ -name simpleserial-{CRYPTO_TARGET.lower()}-{PLATFORM}.hex\n",
     "\n",
     "print(f\"Probable path to communication protocol with the {CRYPTO_TARGET} code: \")\n",
@@ -659,7 +657,7 @@
     "We can see that we will have 8 succesive compress somewhere in the beginning of the trace  \n",
     "So in the first samples of one trace we should have:\n",
     "* a few samples related to the chipwhisperer trigger process\n",
-    "* some more few samples for the start of the compress function\n",
+    "* some more few samples for the start of `for` loops\n",
     "* 8 patterns corresponding to the compress\n",
     "* some extra samples between the patterns for the logic behind the `for` loops.  "
    ]
@@ -674,7 +672,7 @@
     "# The number of coefficient for the whole second for loop\n",
     "nb_coeffs                   = 8\n",
     "\n",
-    "# An educated guess on how much samples are taken at the beginning of the poly_tomsg function\n",
+    "# An educated guess on how much samples are taken at the beginning of the poly_tomsg for loops\n",
     "start_function_offset       = 6 * cw_sample_cycle_ratio\n",
     "\n",
     "# Another educated guess on how much other operations are accounted for in the trace\n",
@@ -710,7 +708,7 @@
     "\n",
     "plt.axvspan(cw_trigger_offset, cw_trigger_offset + start_function_offset, color = \"sandybrown\", alpha = 0.2)\n",
     "x_pos = (cw_trigger_offset + start_function_offset + cw_trigger_offset)/2\n",
-    "plt.text(x_pos, y_pos, 'start\\npoly_tomsg', horizontalalignment='center', verticalalignment='center', fontsize=9)\n",
+    "plt.text(x_pos, y_pos, 'start\\nfor loop', horizontalalignment='center', verticalalignment='center', fontsize=9)\n",
     "\n",
     "plt.axvspan(cw_trigger_offset + start_function_offset, cw_trigger_offset + start_function_offset + nb_coeffs * max_samples_compress + other_operations_samples, color = \"green\", alpha = 0.2)\n",
     "x_pos = (cw_trigger_offset + start_function_offset + nb_coeffs * max_samples_compress + other_operations_samples + cw_trigger_offset)/2\n",
@@ -870,7 +868,7 @@
     "\n",
     "plt.axvspan(cw_trigger_offset, cw_trigger_offset + start_function_offset, color = \"sandybrown\", alpha = 0.2)\n",
     "x_pos = (cw_trigger_offset + start_function_offset + cw_trigger_offset)/2\n",
-    "plt.text(x_pos, y_pos, 'start\\npoly_tomsg', horizontalalignment='center', verticalalignment='center', fontsize=9)\n",
+    "plt.text(x_pos, y_pos, 'start\\nfor loop', horizontalalignment='center', verticalalignment='center', fontsize=9)\n",
     "\n",
     "for compress_index in range(0, nb_coeffs):\n",
     "    start_window, end_window = compress_index_start[compress_index], compress_index_end[compress_index]\n",
@@ -925,7 +923,7 @@
     "\n",
     "plt.axvspan(cw_trigger_offset, cw_trigger_offset + start_function_offset, color = \"sandybrown\", alpha = 0.2)\n",
     "x_pos = (cw_trigger_offset + start_function_offset + cw_trigger_offset)/2\n",
-    "plt.text(x_pos, y_pos, 'start\\npoly_tomsg', horizontalalignment='center', verticalalignment='center', fontsize=7)\n",
+    "plt.text(x_pos, y_pos, 'start\\nfor loop', horizontalalignment='center', verticalalignment='center', fontsize=7)\n",
     "\n",
     "plt.axvline(compress_index_start[0], color =\"red\")\n",
     "plt.axvline(compress_index_end[-1], color =\"red\")\n",
@@ -1018,7 +1016,7 @@
     "\n",
     "plt.axvspan(cw_trigger_offset, cw_trigger_offset + start_function_offset, color = \"sandybrown\", alpha = 0.2)\n",
     "x_pos = (cw_trigger_offset + start_function_offset + cw_trigger_offset)/2\n",
-    "plt.text(x_pos, y_pos, 'start\\npoly_tomsg', horizontalalignment='center', verticalalignment='center', fontsize=7)\n",
+    "plt.text(x_pos, y_pos, 'start\\nfor loop', horizontalalignment='center', verticalalignment='center', fontsize=7)\n",
     "\n",
     "plt.axvline(compress_index_start[0], color =\"red\")\n",
     "plt.axvline(compress_index_end[-1], color =\"red\")\n",
@@ -1037,24 +1035,6 @@
     "plt.text(x_pos, y_pos, f'poly_tomsg {nb_coeffs} next coefficients', horizontalalignment='center', verticalalignment='center', fontsize=9)\n",
     "\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1ecf39fe",
-   "metadata": {},
-   "source": [
-    "If everything looks fine we can save the relevant constants in a file"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dfa059b2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "approximate_length_compress_coeff"
    ]
   },
   {
@@ -1142,7 +1122,21 @@
    "id": "5cda7468-a8d6-46a6-bea0-57077d2853b2",
    "metadata": {},
    "source": [
-    "After displaying all the 256 traces, we can see that only the samples between 9 and 10 exhibit strong leakage. We will focus on those."
+    "After displaying all the 256 traces, we can see that only the samples between 9 and 10 exhibit strong leakage in our case. We will focus on those.\n",
+    " \n",
+    "⚠️  It’s possible that the leakage shifts depending on the pattern matching obtained. Adjust it to the window where you observe the most leakage."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8ee8d62f-3e0b-43b9-9650-247ab452f580",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reduced_start = 9\n",
+    "reduced_len   = 2\n",
+    "reduced_end   = reduced_start + reduced_len"
    ]
   },
   {
@@ -1152,10 +1146,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "reduced_start = 9\n",
-    "reduced_len   = 2\n",
-    "reduced_end   = reduced_start + reduced_len\n",
-    "\n",
+    "# Displaying the selected reduced window on all traces\n",
     "trace = dataset_building_rounded0[0]\n",
     "for compress_index in range(0, N):\n",
     "    start_window, end_window = get_compress_index_window(compress_index)\n",
@@ -1209,24 +1200,6 @@
     "    end_compress_index   = start_compress_index + reduced_len\n",
     "    return start_compress_index, end_compress_index\n",
     "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "13861c65-7949-4e46-ae87-a544cb13094b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# def calculate_start_compress_index(compress_index, start_index_compress_coeff0, approximate_length_compress_coeff,\n",
-    "#                                     nb_coeffs, distance_forj_loop_forj_loop, distance_fori_loop_forj_loop):\n",
-    "#     base_offset = start_index_compress_coeff0 + compress_index * approximate_length_compress_coeff\n",
-    "#     forj_offset = ((compress_index//nb_coeffs)*(nb_coeffs-1) + (compress_index%nb_coeffs)) * distance_forj_loop_forj_loop\n",
-    "#     fori_offset = (compress_index // nb_coeffs) * distance_fori_loop_forj_loop\n",
-    "    \n",
-    "#     start_compress_index = base_offset + forj_offset + fori_offset + 9\n",
-    "#     end_compress_index   = start_compress_index + 2\n",
-    "#     return start_compress_index , end_compress_index\n"
    ]
   },
   {
