--- a/Attack_with_CW/kyber_polytomsg_leakage_detection.ipynb
+++ b/Attack_with_CW/kyber_polytomsg_leakage_detection.ipynb
@@ -27,23 +27,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "480b1c45",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Loading auxiliary functions for Chipwhisperer communication\n",
-    "%run -i Chipwhisperer_functions.py"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "6e6e8602",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Loading auxiliary functions\n",
     "%run -i ../Common_functions/Additional_functions.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8cc18552-af06-49c2-bd56-79d66585a540",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Loading auxiliary functions for Chipwhisperer communication\n",
+    "%run -i Chipwhisperer_functions.py"
    ]
   },
   {
@@ -674,6 +674,7 @@
     "\n",
     "# An educated guess on how much samples are taken at the beginning of the poly_tomsg for loops\n",
     "start_function_offset       = 6 * cw_sample_cycle_ratio\n",
+    "# start_function_offset       = 4 * cw_sample_cycle_ratio\n",
     "\n",
     "# Another educated guess on how much other operations are accounted for in the trace\n",
     "other_operations_samples    = 4 * cw_sample_cycle_ratio\n",
@@ -1118,6 +1119,76 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a098777f-ce76-43d2-9509-604744b05c17",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# For each trace in the dataset, we iterate through the N coeffs to get the window where each coeff is compressed\n",
+    "# Then, we compute the mean trace for the negative coeff rounded to 0 after the compress on the first 256 coeffs\n",
+    "\n",
+    "traces_mean_rounded0_204 = []\n",
+    "for trace in dataset_building_rounded0:\n",
+    "    for compress_index in range(0, 128):\n",
+    "        start_window, end_window = get_compress_index_window(compress_index)\n",
+    "        traces_mean_rounded0_204.append(trace[start_window: end_window + 1])\n",
+    "mean_rounded0_204 = np.mean(traces_mean_rounded0_204,axis=0)\n",
+    " \n",
+    " \n",
+    "# For each trace in the dataset, we iterate through the N coeffs to get the window where each coeff is compressed\n",
+    "# Then, we compute the mean trace for the negative coeff rounded to 0 after the compress on the first 256 coeffs\n",
+    "\n",
+    "traces_mean_rounded1_204 = []\n",
+    "for trace in dataset_building_rounded1:\n",
+    "    for compress_index in range(0, 128):\n",
+    "        start_window, end_window = get_compress_index_window(compress_index)\n",
+    "        traces_mean_rounded1_204.append(trace[start_window: end_window + 1])\n",
+    "mean_rounded1_204 = np.mean(traces_mean_rounded1_204,axis=0)\n",
+    " \n",
+    "# For each trace in the dataset, we iterate through the N coeffs to get the window where each coeff is compressed\n",
+    "# Then, we compute the mean trace for the negative coeff rounded to 0 after the compress on the first 256 coeffs\n",
+    "\n",
+    "traces_mean_rounded0_256 = []\n",
+    "for trace in dataset_building_rounded0:\n",
+    "    for compress_index in range(128, N):\n",
+    "        start_window, end_window = get_compress_index_window(compress_index)\n",
+    "        traces_mean_rounded0_256.append(trace[start_window: end_window + 1])\n",
+    "mean_rounded0_256 = np.mean(traces_mean_rounded0_256,axis=0)\n",
+    " \n",
+    "# For each trace in the dataset, we iterate through the N coeffs to get the window where each coeff is compressed\n",
+    "# Then, we compute the mean trace for the negative coeff rounded to 0 after the compress on the first 256 coeffs\n",
+    "\n",
+    "traces_mean_rounded1_256 = []\n",
+    "for trace in dataset_building_rounded1:\n",
+    "    for compress_index in range(128, N):\n",
+    "        start_window, end_window = get_compress_index_window(compress_index)\n",
+    "        traces_mean_rounded1_256.append(trace[start_window: end_window + 1])\n",
+    "\n",
+    "mean_rounded1_256 = np.mean(traces_mean_rounded1_256,axis=0)\n",
+    "\n",
+    "\n",
+    " "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2cee7c56-7d9e-4134-bb6b-cb38ecf1b7ce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plotting to visualize the difference between mean_rouded0 and mean_rounded1\n",
+    "plt.plot(mean_rounded0_204, color = color0, label='mean_rounded0_204')\n",
+    "plt.plot(mean_rounded1_204, color = color1, label='mean_rounded1_204')\n",
+    "plt.plot(mean_rounded0_256, label='mean_rounded0_256')\n",
+    "plt.plot(mean_rounded1_256, label='mean_rounded1_256')\n",
+    "plt.title(\"Means of each datasets\",y=-0.3)\n",
+    "plt.legend()\n",
+    "plt.show()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "5cda7468-a8d6-46a6-bea0-57077d2853b2",
    "metadata": {},
@@ -1190,7 +1261,7 @@
    "outputs": [],
    "source": [
     "# We redefine the function that computes the window on the restricted samples\n",
-    "def get_compress_index_window(compress_index):\n",
+    "def get_compress_index_window_reduced(compress_index):\n",
     "    start_compress_index =  start_index_compress_coeff0\\\n",
     "                          + compress_index*approximate_length_compress_coeff\\\n",
     "                          + (compress_index//nb_coeffs)*(nb_coeffs-1)*distance_forj_loop_forj_loop\\\n",
@@ -1337,7 +1408,7 @@
     "        ATK_TRACES[poly_targeted].append(trace)\n",
     "        \n",
     "        for coeff_index in range(N):\n",
-    "            start_compress_coeff, end_compress_coeff = get_compress_index_window(coeff_index)\n",
+    "            start_compress_coeff, end_compress_coeff = get_compress_index_window_reduced(coeff_index)\n",
     "            # Each trace is used to distinguish between coeffs rounded to 0 and coeffs rounded to 1\n",
     "            trace_compress_coeff = trace[start_compress_coeff:end_compress_coeff + 1]\n",
     "\n",
@@ -1379,6 +1450,7 @@
     "    for poly_ in range(K):\n",
     "        for coeff_ in range(N):\n",
     "            if found_polyvec_sk_PKE[poly_][coeff_] != polyvec_sk_PKE[poly_][coeff_]:\n",
+    "                print(f\"found_polyvec_sk_PKE[{poly_}][{coeff_}]:{found_polyvec_sk_PKE[poly_][coeff_]} != polyvec_sk_PKE[{poly_}][{coeff_}]:{polyvec_sk_PKE[poly_][coeff_]}\")\n",
     "                cpt_wron_coeffs += 1\n",
     "    \n",
     "    print(f\"Number of wrongly guessed coefficients: {cpt_wron_coeffs}\")"
