--- a/Attack_with_CW/kyber_polytomsg_leakage_detection.ipynb
+++ b/Attack_with_CW/kyber_polytomsg_leakage_detection.ipynb
@@ -1344,7 +1344,7 @@
     "            norm_rounded0 = np.linalg.norm(reduced_mean_rounded0 - trace_compress_coeff)\n",
     "            norm_rounded1 = np.linalg.norm(reduced_mean_rounded1 - trace_compress_coeff)\n",
     "\n",
-    "            MATCH[poly_targeted][coeff_index].append(np.argmin([norm_rounded0, norm_rounded1]))"
+    "            MATCH[poly_targeted][coeff_index].append(int(np.argmin([norm_rounded0, norm_rounded1])))"
    ]
   },
   {
