--- a/Attack_with_CW/kyber_polytomsg_leakage_detection_shuffling.ipynb
+++ b/Attack_with_CW/kyber_polytomsg_leakage_detection_shuffling.ipynb
@@ -2070,7 +2070,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "id": "79dc33f4-fa7d-4cf5-8122-8091897529a9",
    "metadata": {},
    "outputs": [
@@ -2115,6 +2115,14 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 53.9 s, sys: 7.72 s, total: 1min 1s\n",
+      "Wall time: 2h 38min 8s\n"
+     ]
     }
    ],
    "source": [
@@ -2127,10 +2135,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "id": "9ff9d19c-f28a-4b8d-873b-bac632a40d70",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The secret Key found is :  [[1, 2, -1, 0, 0, 0, -1, -1, -2, 1, 0, 1, 0, -1, 1, 0, 1, 2, 0, -1, -2, -2, -1, -2, 1, 0, 0, 0, 0, 0, 0, 1, -2, -2, -2, 1, 0, -2, -1, 1, -1, 1, 0, 1, 0, 0, 0, 1, 1, -1, -1, -1, 0, 0, -2, 0, -1, -1, -2, -1, -1, 0, 2, 1, 0, 1, 0, 0, -2, 1, 2, 0, -1, -1, 1, 2, 2, -1, 0, -1, 2, -1, 0, -1, 0, 1, 2, -2, 0, 0, 1, -2, -1, 1, -1, 1, 0, 1, 2, -1, 2, 0, 0, -1, 1, -1, -1, -1, 0, 1, -2, 0, -2, 1, 0, 0, 0, -1, -1, 2, -2, 1, -2, 1, 1, -1, -1, 1, -2, 0, -2, -1, 1, 0, 0, 0, 1, -1, 0, 1, 2, 0, 0, 1, 0, 1, 1, 1, 2, 0, -3, -3, 0, 2, 0, 1, 1, 1, -2, 0, -1, 2, -1, 0, -2, -1, 1, 3, 0, -2, 0, 0, -1, 3, 1, 0, 0, -1, 0, 0, -2, 1, 0, -2, 0, 2, 1, 0, -1, 1, 1, 3, 0, -1, 1, -2, 1, 0, -1, 0, 0, -2, 0, 0, -3, 2, 1, 2, -1, -1, 0, 0, 3, 0, -2, -1, -1, -2, -1, 1, 0, 0, 0, -1, -1, -2, 1, 0, -2, -1, -2, 0, -1, 1, -1, 2, 1, 0, -2, 1, 0, 0, 0, 1, -1, 2, -1, 0, 0, 0, 1, 0, -1, -1, -2, -1], [2, 1, 1, 2, 1, 0, -1, 1, 0, 1, -1, -2, 1, 3, 0, 1, 2, 1, 1, 0, -2, 1, 2, 1, 0, -1, 0, -1, 0, -2, 1, 1, 0, -2, 1, 1, 0, -1, 2, 0, 1, -1, -1, -2, 0, 1, 0, -2, 1, -1, 2, 0, 2, -1, 0, -1, 0, 3, 1, -1, 0, -1, 0, 0, 1, 0, -1, 1, 1, 2, -2, 2, -2, -1, 0, 0, 0, 2, 0, -1, 2, 1, 1, -1, -1, 1, -1, 0, 0, -1, 0, 3, 2, 0, -1, 3, -1, 0, 0, -1, 1, -2, 1, 0, 1, 2, 1, 3, 1, 0, -2, 2, 2, 1, -2, 0, -1, 0, 1, 1, 3, -1, 0, 1, 2, 1, -3, 2, -1, -2, 1, -1, 1, 1, 1, 0, 0, 0, 1, 1, 1, -1, -1, 0, -2, 1, -1, 2, 0, 0, -3, 0, 0, -1, 1, 0, 1, 2, -1, 0, 0, -1, -1, 1, -2, 1, 1, 1, 1, 1, 1, 1, 0, 1, 0, 2, -1, 0, 0, 0, 0, 1, 1, -1, -1, 0, -1, 1, 0, 1, -1, 1, -1, 0, -1, 2, -2, -2, 0, 1, 0, 2, 0, -1, 1, -1, 0, 2, 0, 1, 0, 2, -1, 2, 2, -1, -1, -1, -1, 2, -1, -2, 1, 0, -1, 0, -1, 0, 1, 2, 0, -1, 2, 0, 2, -1, -2, 0, 1, -2, 1, -1, -1, -2, -1, 2, 1, 1, 2, 1, -3, -2, 0, 0, 0, 1]]\n"
+     ]
+    }
+   ],
    "source": [
     "# Found secret key\n",
     "print(\"The secret Key found is : \", found_polyvec_sk_PKE)"
@@ -2138,10 +2154,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "id": "5f7e4ac3-1eab-47a0-8bdc-e5ff86dac619",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No errors, you have correctly guessed the secret key\n"
+     ]
+    }
+   ],
    "source": [
     "if found_polyvec_sk_PKE == polyvec_sk_PKE :\n",
     "    print(f\"No errors, you have correctly guessed the secret key\")\n",
@@ -2159,7 +2183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "id": "1c332d8d-f3ff-4664-8ed5-fde6e0e5dc7d",
    "metadata": {},
    "outputs": [],
@@ -2172,7 +2196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "id": "bfdd42b7",
    "metadata": {},
    "outputs": [],
