--- a/Attack_with_CW/kyber_polytomsg_leakage_detection_shuffling.ipynb
+++ b/Attack_with_CW/kyber_polytomsg_leakage_detection_shuffling.ipynb
@@ -25,12 +25,41 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "bf514adb-67fa-4a0e-b5e8-3ab9c7537ed9",
+   "metadata": {},
+   "source": [
+    "Choose the security strength of Kyber:  \n",
+    "- For Kyber-512 choose  `K = 2`\n",
+    "- For Kyber-768 choose  `K = 3`\n",
+    "- For Kyber-1024 choose `K = 4`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "11a93f3f-3b76-46af-8f11-45c7afff05f7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "K = 2\n",
+    "# K = 3\n",
+    "# K = 4"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "c8c1a50e-2a40-41be-b518-182bd18649d6",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Loading kyber parameters according to the chosen security level K\n",
+    "%run -i ../Common_functions/Kyber_parameters.py {K}\n",
+    "\n",
+    "# Loading auxiliary functions\n",
+    "%run -i ../Common_functions/Kyber_functions.py\n",
+    "\n",
     "# Loading auxiliary functions\n",
     "%run -i ../Common_functions/Additional_functions.py"
    ]
