--- a/Attack_without_CW/kyber_polytomsg_leakage_detection.ipynb
+++ b/Attack_without_CW/kyber_polytomsg_leakage_detection.ipynb
@@ -24,19 +24,48 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "614cce37-299b-43a5-951b-03e4a1fc844f",
+   "metadata": {},
+   "source": [
+    "Choose the security strength of Kyber:  \n",
+    "- For Kyber-512 choose  `K = 2`\n",
+    "- For Kyber-768 choose  `K = 3`\n",
+    "- For Kyber-1024 choose `K = 4`"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "6e6e8602",
+   "id": "7415a5f6-417f-4a93-b9e3-36af25c034e9",
    "metadata": {},
    "outputs": [],
    "source": [
+    "K = 2\n",
+    "# K = 3\n",
+    "# K = 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "e7f2c572-1d13-47d4-b159-aadc35d53f70",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Loading kyber parameters according to the chosen security level K\n",
+    "%run -i ../Common_functions/Kyber_parameters.py {K}\n",
+    "\n",
+    "# Loading auxiliary functions\n",
+    "%run -i ../Common_functions/Kyber_functions.py\n",
+    "\n",
     "# Loading auxiliary functions\n",
     "%run -i ../Common_functions/Additional_functions.py"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "6b6bd24f",
    "metadata": {},
    "outputs": [],
@@ -48,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "82f5b1fe",
    "metadata": {},
    "outputs": [],
@@ -65,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "f7b95711-a1cc-421e-90f2-fe79d91dacc8",
    "metadata": {},
    "outputs": [],
@@ -79,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "649e28c4",
    "metadata": {},
    "outputs": [],
@@ -111,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "93ae3f6e-fef3-4ad9-b109-a12e0523ac4e",
    "metadata": {},
    "outputs": [
@@ -140,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "72e4cf13-e880-4868-801f-5e17829ee9d3",
    "metadata": {},
    "outputs": [],
@@ -151,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "1767ddce-d8eb-4505-a469-f73b1af0f336",
    "metadata": {},
    "outputs": [],
@@ -162,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "76d31136-32b5-42c6-b1ec-6bc741fe098a",
    "metadata": {},
    "outputs": [
@@ -212,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "85a907da",
    "metadata": {},
    "outputs": [],
@@ -222,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "6f25e809",
    "metadata": {},
    "outputs": [
@@ -272,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "60cce1b8",
    "metadata": {},
    "outputs": [],
@@ -317,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "60daa30a",
    "metadata": {},
    "outputs": [],
@@ -348,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "dbc52d6b",
    "metadata": {},
    "outputs": [],
@@ -378,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "66941648",
    "metadata": {},
    "outputs": [
@@ -422,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "54f0e4c6",
    "metadata": {},
    "outputs": [],
@@ -436,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "998a8893",
    "metadata": {
     "scrolled": true
@@ -448,8 +477,8 @@
      "text": [
       ">>> You have found 356 good matching patterns candidates\n",
       "\n",
-      "CPU times: user 328 ms, sys: 8.9 ms, total: 337 ms\n",
-      "Wall time: 316 ms\n"
+      "CPU times: user 336 ms, sys: 0 ns, total: 336 ms\n",
+      "Wall time: 336 ms\n"
      ]
     }
    ],
@@ -501,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "1c9c520a",
    "metadata": {},
    "outputs": [
@@ -702,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "ec5b3eb1",
    "metadata": {},
    "outputs": [],
@@ -716,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "b0b629d0",
    "metadata": {},
    "outputs": [],
@@ -734,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "2bc28368",
    "metadata": {},
    "outputs": [
@@ -783,7 +812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "94f99fcb",
    "metadata": {},
    "outputs": [],
@@ -799,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "a8cb2920",
    "metadata": {},
    "outputs": [
@@ -847,7 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "id": "9758d877",
    "metadata": {},
    "outputs": [
@@ -856,8 +885,8 @@
      "output_type": "stream",
      "text": [
       "Good window found (524, 580) with quality 0.999075466948148\n",
-      "CPU times: user 3.06 ms, sys: 12.6 ms, total: 15.6 ms\n",
-      "Wall time: 5.09 ms\n"
+      "CPU times: user 5.74 ms, sys: 9.54 ms, total: 15.3 ms\n",
+      "Wall time: 4.98 ms\n"
      ]
     }
    ],
@@ -879,7 +908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "id": "f8f5a82a",
    "metadata": {},
    "outputs": [],
@@ -898,7 +927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "id": "3292fb5e",
    "metadata": {},
    "outputs": [],
@@ -916,7 +945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "id": "7287aafb",
    "metadata": {},
    "outputs": [
@@ -990,7 +1019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "id": "4ad70760-a5c1-4829-8b04-26e333e8caef",
    "metadata": {},
    "outputs": [],
@@ -1008,7 +1037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "id": "f5348465-25ca-44e4-b92d-9975eefebea8",
    "metadata": {},
    "outputs": [],
@@ -1026,7 +1055,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "id": "696c44cc-f972-4420-b1ec-0de67749cc42",
    "metadata": {},
    "outputs": [
@@ -1064,7 +1093,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "id": "d4072104-3433-4579-9d2f-e3c7cb9bfd87",
    "metadata": {},
    "outputs": [
@@ -1110,7 +1139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "id": "fe68ffd0-8237-442d-943a-5486fa28c632",
    "metadata": {},
    "outputs": [],
@@ -1121,7 +1150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "id": "baad6cb1-9ded-4c89-8286-ebcdd87a96b5",
    "metadata": {},
    "outputs": [],
@@ -1159,7 +1188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "id": "377b136f-0ceb-49ea-b4d6-ab7f96ee318a",
    "metadata": {},
    "outputs": [],
@@ -1179,7 +1208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "id": "5f519332-83d5-4445-a742-d3f2d23b7eb5",
    "metadata": {},
    "outputs": [],
@@ -1214,7 +1243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "id": "1fc3fe12-26af-47f6-97ee-7f8e265d168d",
    "metadata": {},
    "outputs": [
@@ -1260,7 +1289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "id": "20a26311-a9f2-4153-9119-9d3ceeca5973",
    "metadata": {},
    "outputs": [],
@@ -1284,7 +1313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 39,
    "id": "8f719eeb",
    "metadata": {},
    "outputs": [],
@@ -1295,7 +1324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 40,
    "id": "b9625aac-768f-40ee-a17d-0cff0615d6c9",
    "metadata": {},
    "outputs": [
@@ -1303,8 +1332,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 528 ms, sys: 76.9 ms, total: 605 ms\n",
-      "Wall time: 604 ms\n"
+      "CPU times: user 406 ms, sys: 46.4 ms, total: 453 ms\n",
+      "Wall time: 452 ms\n"
      ]
     }
    ],
@@ -1332,7 +1361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 41,
    "id": "2e98000e-0f0a-4fae-9331-f1b7f69e334c",
    "metadata": {
     "scrolled": true,
@@ -1367,7 +1396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 42,
    "id": "d004231f",
    "metadata": {},
    "outputs": [
@@ -1402,7 +1431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 43,
    "id": "d94c112f-3d05-42a5-857e-cae10a136645",
    "metadata": {},
    "outputs": [
