add files so that repo is self-contained

--- a/Attack_without_CW/kyber_polytomsg_leakage_detection.ipynb
+++ b/Attack_without_CW/kyber_polytomsg_leakage_detection.ipynb
@@ -1203,7 +1203,7 @@
    "metadata": {},
    "source": [
     "We visualize the range of possible values for the secret coefficient based on the result of the compression given by the side-channel traces\n",
-    "![test](graphe.PNG)"
+    "![test](query_tree_kyber512.png)"
    ]
   },
   {
